--- a/cpu2.sim/sim_1/behav/xsim/xsim.dir/openmips_min_sopc_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/cpu2.sim/sim_1/behav/xsim/xsim.dir/openmips_min_sopc_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2086221</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Nov 29 13:53:24 2024</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Dec  2 19:00:52 2024</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2017.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>b3ca6785563047909da39f26bf3c9868</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>55</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>56</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>85395bd5-29a7-466f-9cda-f2c30be1d340</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>85395bd5-29a7-466f-9cda-f2c30be1d340</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -35,17 +35,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
+    <TD>debug=typical</TD>
+    <TD>dpi_used=false</TD>
+    <TD>file_counter=16</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
+    <TD>hwcosim=false</TD>
+    <TD>sdfmodeling=false</TD>
+    <TD>vhdl2008=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=0</TD>
-    <TD>runtime=1050 ns</TD>
-    <TD>simulation_memory=10072_KB</TD>
-    <TD>simulation_time=0.03_sec</TD>
-</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=61384_KB</TD>
+    <TD>compiler_time=1.44_sec</TD>
+    <TD>simulation_image_code=204 KB</TD>
+    <TD>simulation_image_data=16 KB</TD>
+</TR><TR ALIGN='LEFT'>    <TD>total_instances=16</TD>
+    <TD>total_nets=0</TD>
+    <TD>total_processes=119</TD>
+    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
